--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="col-xxl-5 pt-5">
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
-                                <h1 class="display-3 fw-bolder mt-5 mb-5"><span class="text-gradient d-inline">Yeju Park</span></h1>
+                                <h1 class="display-3 fw-bolder mt-5 mb-5"><span class="text-uppercase d-inline">Yeju Park</span></h1>
                                 <!-- <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">DATA &middot; Development &middot; -</div></div> -->
                                 <img src="https://img.shields.io/badge/Javascript-ffb13b?style=flat-square&logo=javascript&logoColor=white"/></a>
                                 <img src="https://img.shields.io/badge/Java-007396?style=flat-square&logo=Java&logoColor=white"/></a>
@@ -53,7 +53,7 @@
                                 <br>
                                 <!-- <div class="fs-3 fw-light text-muted">I can help your business to</div> -->
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                    <a class="btn btn-outline-secondary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
+                                    <a class="btn btn-outline-light bg-success btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
                                     <a class="btn btn-outline-success btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
                                 </div>
                             </div>
@@ -77,11 +77,11 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
-                                <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
+                                <h2 class="display-5 fw-bolder"><span class="text d-inline" style="color:#026643">About Me</span></h2>
                                 <p class="lead fw-light mb-4">My name is Start Bootstrap and I help brands grow.</p>
                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit dolorum itaque qui unde quisquam consequatur autem. Eveniet quasi nobis aliquid cumque officiis sed rem iure ipsa! Praesentium ratione atque dolorem?</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
+                                    <a class="text-gradient" href="#!"><i class="bi bi-instagram"></i></a>
                                     <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
                                     <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                                 </div>
